welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: not found: value ||
  if (speed<=60)||(isBirthday==true && speed <=65){
                ^